# wsinsight

./: .readthedocs.yaml  Dockerfile  README.md  constraints.txt  install.sh  pyproject.toml  requirements.txt
docs/: cli.rst  conf.py  index.rst  installing.rst  requirements.txt  user_guide.rst
docs/_static/: switcher.json
scripts/: convert_tf_to_pytorch_til_inceptionv4.py  convert_to_torchscript.py
tests/: test_all.py
wsinsight/: __init__.py  __main__.py  errors.py  num_worker_optimizer.py  qupath.py  uri_path.py  write_geojson.py  write_omecsv.py  wsi.py
wsinsight/cli/: __init__.py  cli.py  cme.py  convert_csv_to_sbubmi.py  hplot.py  infer.py  patch.py  run.py
wsinsight/insightlib/: __init__.py  cme_generation.py  hplot_generation.py  insight_helpers.py  k_hop_neighbors_bak.py  vorononi_cme_region_helper.py
wsinsight/modellib/: __init__.py  data.py  models.py  run_inference.py  tilefuse.py  transforms.py
wsinsight/patchlib/: __init__.py  __init__.py.old  io.py  patch.py  pipeline.py  segment.py
