[build-system]
requires = ["setuptools==69.5.1", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsinsight"
description = "Run patch-based classification on pathology whole slide images."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache License, Version 2.0" }
authors = [
  { name = "WSInsight Team" },
]
maintainers = [
  { name = "WSInsight Team" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
# Version is dynamic via setuptools-scm (use tags). Keep only the hard compatibility rule here.
dependencies = [
  "click>=8.0,<9,!=8.1.4,!=8.1.5",
  "h5py",
  "numpy>=1.21.0,<2.0.0",
  "opencv-python-headless>=4.0.0",
  "orjson>=3.9.0",
  "pandas>=2.0",
  "pillow>=10.0",
  "scikit-image>=0.20.0",
  "scikit-learn",
  "shapely>=2.0",
  "tifffile>=2023.1.23",
  "tiffslide>=2.2.0",
  "imagecodecs>=2023.7.10 ; python_version>='3.9'",
  "tqdm",

  # ML stacks (kept unpinned except minimals where WSInfer template had them),
  # so they resolve their own compat. Users bring their CUDA toolkit.
  "torch>=1.7",
  "torchvision",
  "torch-geometric",
  "timm",
  "tensorflow",
  "keras",
  "stardist",
  "nvidia-ml-py",

  # Storage / cloud
  "s3fs",
  "boto3",
  "platformdirs",

  # Graph & clustering
  "igraph",
  "leidenalg",

  # Geospatial Python layer (users install GDAL themselves first)
  "geopandas",
  "pyproj",
  "rasterio",
  "pyogrio",

  # Pathology / WSI ecosystem
  "openslide-python",
  "histomicstk",
  "wsidicom",

  # QuPath integration
  "paquo",

  # Model zoo (hyphen name, per you)
  "wsinfer-zoo>=0.6.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://wsinsight.readthedocs.io"
Documentation = "https://wsinsight.readthedocs.io"
Repository = "https://github.com/huangch/wsinsight"
BugTracker = "https://github.com/huangch/wsinsight/issues"

[project.scripts]
wsinsight = "wsinsight.cli.cli:cli"

[tool.setuptools.packages.find]
include = ["wsinsight*"]

[tool.setuptools.package-data]
wsinsight = ["py.typed", "schemas/*.json"]

[tool.setuptools_scm]
write_to = "wsinsight/_version.py"
fallback_version = "0.1.0"
# default version/local scheme is fine; tag your release as `v0.1.0` or `0.1.0`

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "h5py",
  "geojson",
  "torchvision.*",
  "openslide",
  "shapely.*",
  "zarr.storage",
]
ignore_missing_imports = true

[tool.ruff]
extend-exclude = ["_version.py", "scripts/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
unfixable = ["B"]

[tool.ruff.lint.isort]
force-single-line = true 

